--- a/src/css/style.css
+++ b/src/css/style.css
@@ -100,3 +100,15 @@ button a {
 button a:hover {
     color: var(--button-text-color);
 }
+
+
+.btnS {
+    display: flex; 
+    flex-direction: column; 
+    align-items: center;
+    justify-content: center; 
+    padding: 20px;
+    background-color: #f4f4f4;
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+}
